add register func and fix connection to server

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="green_2">#65934A</color>
     <color name="green_3">#407434</color>
     <color name="green_4">#03230E</color>
+
+    <!--字体颜色-->
 </resources>
