--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,8 @@
             android:layout_marginStart="@dimen/view_left_padding"
             android:layout_marginEnd="@dimen/view_right_padding"
             android:layout_marginTop="@dimen/input_margin_top"
-            android:layout_marginBottom="@dimen/input_margin_bottom"/>
+            android:layout_marginBottom="@dimen/input_margin_bottom"
+            android:background="@color/green_2"/>
 
         <TextView
             android:layout_width="wrap_content"
