--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
             android:orientation="horizontal">
             <EditText
                 android:hint="@string/hint"
+                android:id="@+id/edit_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/view_left_padding"
@@ -55,6 +56,7 @@
                 android:layout_marginBottom="@dimen/input_margin_bottom"
                 />
             <TextView
+                android:id="@+id/get_edit_validate_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_validate_code"
@@ -65,6 +67,7 @@
         <!--<View
             style="@style/line_style"/>-->
         <EditText
+            android:id="@+id/edit_validate_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/validate_code"
@@ -75,8 +78,10 @@
             android:layout_marginBottom="@dimen/input_margin_bottom"/>
 
         <EditText
+            android:id="@+id/edit_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="@string/password"
             android:layout_marginStart="@dimen/view_left_padding"
             android:layout_marginEnd="@dimen/view_right_padding"
@@ -85,6 +90,7 @@
             android:layout_marginBottom="@dimen/input_margin_bottom"/>
 
         <Button
+            android:id="@+id/register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/register"
@@ -92,10 +98,8 @@
             android:layout_marginStart="@dimen/view_left_padding"
             android:layout_marginEnd="@dimen/view_right_padding"
             android:layout_marginTop="@dimen/input_margin_top"
-            android:layout_marginBottom="@dimen/input_margin_bottom"/>
+            android:layout_marginBottom="@dimen/input_margin_bottom"
+            android:background="@color/green_2"/>
 
     </LinearLayout>
-
-
-
 </LinearLayout>
