--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,4 +8,10 @@
         <item name="android:background">@color/line_color</item>
     </style>
 
+    <!--头像样式-->
+    <style name="roundImageShape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
