--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/main_view_pager"/>
 
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_horizontal"
-        android:text="跳转"
-        android:id="@+id/main_to_login"
-        android:onClick="onClick"/>
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:id="@+id/bottom_navigation_bar" />
 </LinearLayout>
