--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,22 +10,40 @@
     <dimen name="view_left_padding">13dp</dimen>
     <dimen name="view_right_padding">13dp</dimen>
 
+    <!--底部导航栏-->
+    <dimen name="nav_bar_padding_top">5dp</dimen>
+
     <!--输入框-->
     <dimen name="input_height">40dp</dimen>
     <dimen name="input_margin_top">10dp</dimen>
     <dimen name="input_margin_bottom">10dp</dimen>
 
     <!--分割线高度-->
-    <dimen name="line_height">1.5dp</dimen>
+    <dimen name="line_height">1dp</dimen>
     <!--字体大小-->
-    <dimen name="font_biggest">20dp</dimen>
-    <dimen name="font_big">18dp</dimen>
-    <dimen name="font_medium">14dp</dimen>
-    <dimen name="font_small">12dp</dimen>
+    <dimen name="font_large">30dp</dimen>
+    <dimen name="font_biggest">22dp</dimen>
+    <dimen name="font_big">19dp</dimen>
+    <dimen name="font_medium">15dp</dimen>
+    <dimen name="font_small">10dp</dimen>
 
     <!--图标大小-->
     <dimen name="icon_biggest">60dp</dimen>
     <dimen name="icon_big">48dp</dimen>
     <dimen name="icon_medium">30dp</dimen>
     <dimen name="icon_small">20dp</dimen>
+
+    <!--背景图高度-->
+    <dimen name="background_image_height">200dp</dimen>
+    <dimen name="avatar_length">70dp</dimen>
+    <dimen name="avatar_stroke">2dp</dimen>
+    <dimen name="avatar_padding">1dp</dimen>
+    <dimen name="avatar_badge">18dp</dimen>
+    <dimen name="avatar_badge_background">20dp</dimen>
+
+    <!--卡片高度-->
+    <dimen name="card_big">140dp</dimen>
+    <dimen name="card_medium">110dp</dimen>
+    <dimen name="card_small">80dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
