--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="tin">#828081</color>
     <color name="orange">#f7882f</color>
     <color name="watermelon">#ff383f</color>
-
+    <color name="white_3">#FFEBCD</color>
+    <color name="white_2">#FAEBD7</color>
+    <color name="white_smoke">#e7eee7</color>
     <!--字体颜色-->
 </resources>
