--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,311 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".fragment.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <com.google.android.material.appbar.MaterialToolbar
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/view_left_padding"
+                android:text="北京" />
+
+            <com.program.moist.widget.IconFontTextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/input_margin_top"
+                android:background="@color/white_smoke"
+                android:text="@string/ic_search"
+                android:gravity="center"/>
+        </com.google.android.material.appbar.MaterialToolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/category">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="@dimen/top_bar_left_margin"
+                style="@style/grid_item_style"
+                android:orientation="vertical"
+                android:gravity="center">
+                <com.program.moist.widget.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ic_sub"
+                    android:textSize="@dimen/font_biggest"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="fuck"
+                    android:textSize="@dimen/font_small"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/tab_style"
+            android:id="@+id/home_tab"/>
+        <androidx.viewpager2.widget.ViewPager2
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/home_viewPager"/>
+    </LinearLayout>
+</LinearLayout>
