--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
+                android:id="@+id/user_name"
                 android:text="@string/me"
                 android:textSize="@dimen/font_large"
                 android:textColor="@color/white"
