--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,10 +40,13 @@
     <dimen name="avatar_padding">1dp</dimen>
     <dimen name="avatar_badge">18dp</dimen>
     <dimen name="avatar_badge_background">20dp</dimen>
+    <dimen name="top_bar_button_height">30dp</dimen>
+    <dimen name="top_bar_button_width">50dp</dimen>
 
     <!--卡片高度-->
     <dimen name="card_big">140dp</dimen>
     <dimen name="card_medium">110dp</dimen>
     <dimen name="card_small">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
