--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,7 +19,7 @@
     <dimen name="input_margin_bottom">10dp</dimen>
 
     <!--分割线高度-->
-    <dimen name="line_height">1dp</dimen>
+    <dimen name="line_height">0.2dp</dimen>
     <!--字体大小-->
     <dimen name="font_large">30dp</dimen>
     <dimen name="font_biggest">22dp</dimen>
@@ -36,12 +36,13 @@
     <!--背景图高度-->
     <dimen name="background_image_height">200dp</dimen>
     <dimen name="avatar_length">70dp</dimen>
+    <dimen name="avatar_length_small">40dp</dimen>
     <dimen name="avatar_stroke">2dp</dimen>
     <dimen name="avatar_padding">1dp</dimen>
     <dimen name="avatar_badge">18dp</dimen>
     <dimen name="avatar_badge_background">20dp</dimen>
-    <dimen name="top_bar_button_height">30dp</dimen>
-    <dimen name="top_bar_button_width">50dp</dimen>
+    <dimen name="top_bar_button_height">35dp</dimen>
+    <dimen name="top_bar_button_width">60dp</dimen>
 
     <!--卡片高度-->
     <dimen name="card_big">140dp</dimen>
@@ -49,4 +50,8 @@
     <dimen name="card_small">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!--轮播图高度-->
+    <dimen name="banner_height">260dp</dimen>
+    <dimen name="info_item_height">45dp</dimen>
 </resources>
