--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,7 +7,12 @@
         <item name="android:layout_height">@dimen/line_height</item>
         <item name="android:background">@color/line_color</item>
     </style>
-
+    <!--较粗的信息分割线-->
+    <style name="divide_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">7dp</item>
+        <item name="android:background">@color/white_smoke</item>
+    </style>
     <!--头像样式-->
     <style name="roundImageShape">
         <item name="cornerFamily">rounded</item>
